Fix blog grid layout in dark mode

--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -1058,7 +1058,7 @@ main {
 
 .research-posts-list {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
 
@@ -1085,6 +1085,13 @@ main {
   height: 200px;
   border-radius: 12px;
   overflow: hidden;
+}
+
+.research-banner-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: var(--transition-1);
 }
 
 /*-----------------------------------*\
